Add Caddy Reverse Proxy

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # You only need to set the following variables if you are running the service on a local machine
 export MNEMONIC="your mnemonic here"
 export SECRET_KEY_BASE="<LONG_SECRET_HERE_FOR_USAGE_WITH_THE_SERVER_AT_LEAST_64_CHARS>"
+export DOMAIN="example.com"
+export LETSENCRYPT_EMAIL="me@example.com"
 
 # You can ignore everything below this line if you are running the service on a local machine
 
