used a fixed version for the images

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ export ATHENA_CHAIN_SUBNETWORK="Athena"
 export HERMES_CHAIN_SUBNETWORK="Hermes"
 export DEMETER_CHAIN_SUBNETWORK="Demeter"
 
+export SMART_CONTRACT_VERIFIER_DOCKER_TAG=v1.1.0
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__ENABLED=true
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__ADDR=0.0.0.0:8050
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__MAX_BODY_SIZE=2097152
@@ -32,6 +33,7 @@ export SMART_CONTRACT_VERIFIER__SOLIDITY__REFRESH_VERSIONS_SCHEDULE=0 0 * * * * 
 # It depends on the OS you are running the service on
 export SMART_CONTRACT_VERIFIER__SOLIDITY__FETCHER__LIST__LIST_URL=https://solc-bin.ethereum.org/linux-amd64/list.json
 
+export VISUALIZER_DOCKER_TAG=v0.2.0
 export VISUALIZER__SERVER__GRPC__ENABLED=false
 
 export DOCKER_TAG=5.1.2.commit.b8965d76
@@ -102,8 +104,11 @@ export MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 export MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 export VISUALIZE_SOL2UML_ENABLED=true
 export VISUALIZE_SOL2UML_SERVICE_URL=http://visualizer:8050/
+
+export SIG_PROVIDER_DOCKER_TAG=main
 export SIG_PROVIDER_ENABLED=true
 export SIG_PROVIDER_SERVICE_URL=http://sig-provider:8050/
 export DECODE_NOT_A_CONTRACT_CALLS=true
 export EIP_1559_ELASTICITY_MULTIPLIER=2
-
+# Used while working with local setup
+export DENO_TLS_CA_STORE=mozilla,system
