enable Caddy admin api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,12 @@ services:
     container_name: caddy
     restart: unless-stopped
     env_file: .env
+    environment:
+      CADDY_ADMIN: "0.0.0.0:2019"
     ports:
       - "80:80"
       - "443:443"
+      - "2019:2019"
     volumes:
       - $PWD/Caddyfile:/etc/caddy/Caddyfile
       - ./data/caddy:/data
