--- a/deploy/package.json
+++ b/deploy/package.json
@@ -22,16 +22,19 @@
     "@polkadot/util": "^10.1.7"
   },
   "dependencies": {
+    "@webb-tools/contracts": "^0.5.32",
     "@webb-tools/interfaces": "^0.5.32",
     "@webb-tools/sdk-core": "^0.1.4-121",
     "@webb-tools/utils": "^0.5.24",
     "@webb-tools/vbridge": "^0.5.32",
     "chalk": "^4",
     "ethers": "5.7.2",
+    "ramda": "^0.29.0",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "v18.14",
+    "@types/ramda": "^0.29.0",
     "dotenv": "^16.0.3",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
