Make the deploy script as CLI

--- a/deploy/package.json
+++ b/deploy/package.json
@@ -30,7 +30,8 @@
     "chalk": "^4",
     "ethers": "5.7.2",
     "ramda": "^0.29.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@types/node": "v18.14",
