--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,22 @@
-# You only need to set the following variables if you are running the service on a local machine
+# =========================================================================================
+# Enter your own values for the following variables:
 export MNEMONIC="your mnemonic here"
 export SECRET_KEY_BASE="<LONG_SECRET_HERE_FOR_USAGE_WITH_THE_SERVER_AT_LEAST_64_CHARS>"
 export DOMAIN="example.com"
 export LETSENCRYPT_EMAIL="me@example.com"
-
+# =========================================================================================
 # You can ignore everything below this line if you are running the service on a local machine
-
 export ATHENA_CHAIN_ID=5001
 export HERMES_CHAIN_ID=5002
 export DEMETER_CHAIN_ID=5003
 export ATHENA_CHAIN_EXPLORER_PORT=4001
 export HERMES_CHAIN_EXPLORER_PORT=4002
 export DEMETER_CHAIN_EXPLORER_PORT=4003
-
 export NETWORK="Webb Testnet"
 export ATHENA_CHAIN_SUBNETWORK="Athena"
 export HERMES_CHAIN_SUBNETWORK="Hermes"
 export DEMETER_CHAIN_SUBNETWORK="Demeter"
-
+# =========================================================================================
 export SMART_CONTRACT_VERIFIER_DOCKER_TAG=v1.1.0
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__ENABLED=true
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__ADDR=0.0.0.0:8050
