--- a/deploy/package.json
+++ b/deploy/package.json
@@ -16,7 +16,8 @@
     "ts:check": "tsc --noEmit",
     "ts:build": "tsc",
     "format": "prettier --write .",
-    "deploy": "NODE_OPTIONS='--use-openssl-ca' ts-node main.ts"
+    "deploy": "NODE_OPTIONS='--use-openssl-ca' ts-node main.ts",
+    "test": "mocha"
   },
   "resolutions": {
     "@polkadot/util": "^10.1.7"
@@ -34,9 +35,15 @@
     "yargs": "^17.7.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "v18.14",
     "@types/ramda": "^0.29.0",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
