--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,6 @@ jobs:
       - name: Install Caddy server
         run: curl -sS https://webi.sh/caddy | sh
 
-      - name: Add .local/bin to the PATH
-        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-
       - name: Setup environment with docker-compose
         run: docker-compose up -d
 
@@ -39,7 +36,7 @@ jobs:
         run: yarn install
 
       - name: Run caddy trust as root
-        run: sudo caddy trust
+        run: sudo ~/.local/bin/caddy trust
 
       - name: Run deployment script
         working-directory: deploy
