--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
-      - name: Setup environment with docker-compose
-        run: docker-compose up -d
+      - name: Setup environment with docker compose
+        run: docker compose up -d
 
       - name: Install Node.js and Yarn
         uses: actions/setup-node@v3
