--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup DVC
+        uses: iterative/setup-dvc@v1
+
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
