--- a/deploy/package.json
+++ b/deploy/package.json
@@ -13,6 +13,8 @@
     "node": ">=18"
   },
   "scripts": {
+    "postinstall": "yarn dvc:pull",
+    "dvc:pull": "cd ./fixtures && dvc pull && cd ..",
     "ts:check": "tsc --noEmit",
     "ts:build": "tsc",
     "format": "prettier --write .",
