--- a/deploy/package.json
+++ b/deploy/package.json
@@ -31,8 +31,10 @@
     "@webb-tools/utils": "^0.5.24",
     "@webb-tools/vbridge": "^0.5.32",
     "chalk": "^4",
+    "ecpair": "^2.1.0",
     "ethers": "5.7.2",
     "ramda": "^0.29.0",
+    "tiny-secp256k1": "^2.2.1",
     "tslib": "^2.5.0",
     "yargs": "^17.7.1"
   },
@@ -46,6 +48,12 @@
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "is-ci": "^3.0.1",
     "mocha": "^10.2.0",
     "prettier": "^2.8.7",
