--- a/deploy/package.json
+++ b/deploy/package.json
@@ -15,14 +15,20 @@
   "scripts": {
     "postinstall": "yarn dvc:pull",
     "dvc:pull": "cd ./fixtures && dvc pull && cd ..",
+    "format": "prettier --write '**/*.{ts,js,json,yml}'",
     "ts:check": "tsc --noEmit",
     "ts:build": "tsc",
-    "format": "prettier --write .",
     "deploy": "NODE_OPTIONS='--use-openssl-ca' ts-node main.ts",
+    "tangle": "NODE_OPTIONS='--use-openssl-ca' ts-node tangle.ts",
     "test": "mocha"
   },
   "resolutions": {
-    "@polkadot/util": "^10.1.7"
+    "@polkadot/api": "9.2.3",
+    "@polkadot/keyring": "10.1.5",
+    "@polkadot/networks": "10.1.5",
+    "@polkadot/types": "9.2.3",
+    "@polkadot/util": "10.1.5",
+    "@polkadot/util-crypto": "10.1.5"
   },
   "dependencies": {
     "@webb-tools/contracts": "^0.5.36",
@@ -39,6 +45,7 @@
     "yargs": "^17.7.1"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.1",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/is-ci": "^3.0.0",
@@ -58,6 +65,6 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5"
   }
 }
