--- a/deploy/tsconfig.json
+++ b/deploy/tsconfig.json
@@ -15,6 +15,9 @@
   },
   "exclude": ["node_modules", "fixtures"],
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "compilerOptions": {
+      "noUnusedLocals": false
+    }
   }
 }
