--- a/deploy/package.json
+++ b/deploy/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "postinstall": "yarn dvc:pull",
-    "dvc:pull": "cd ./fixtures && dvc pull && cd ..",
+    "dvc:pull": "cd ./fixtures && dvc pull || exit 0 && cd ..",
     "format": "prettier --write '**/*.{ts,js,json,yml}'",
     "ts:check": "tsc --noEmit",
     "ts:build": "tsc",
@@ -29,14 +29,26 @@
     "@polkadot/networks": "10.1.5",
     "@polkadot/types": "9.2.3",
     "@polkadot/util": "10.1.5",
-    "@polkadot/util-crypto": "10.1.5"
+    "@polkadot/util-crypto": "10.1.5",
+    "@webb-tools/vbridge": "0.5.36",
+    "@webb-tools/anchors": "0.5.40",
+    "@webb-tools/api": "0.1.4-123",
+    "@webb-tools/api-derive": "0.1.4-123",
+    "@webb-tools/app-util": "0.1.4-123",
+    "@webb-tools/contracts": "0.5.40",
+    "@webb-tools/interfaces": "0.5.40",
+    "@webb-tools/sdk-core": "0.1.4-123",
+    "@webb-tools/test-utils": "0.1.4-123",
+    "@webb-tools/tokens": "0.5.40",
+    "@webb-tools/utils": "0.5.32",
+    "@webb-tools/wasm-utils": "0.1.4-123"
   },
   "dependencies": {
-    "@webb-tools/contracts": "^0.5.36",
-    "@webb-tools/interfaces": "^0.5.36",
-    "@webb-tools/sdk-core": "^0.1.4-121",
-    "@webb-tools/utils": "^0.5.28",
-    "@webb-tools/vbridge": "^0.5.36",
+    "@webb-tools/contracts": "0.5.40",
+    "@webb-tools/interfaces": "0.5.40",
+    "@webb-tools/sdk-core": "0.1.4-123",
+    "@webb-tools/utils": "0.5.32",
+    "@webb-tools/vbridge": "0.5.36",
     "chalk": "^4",
     "ecpair": "^2.1.0",
     "ethers": "5.7.2",
