--- a/deploy/package.json
+++ b/deploy/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "postinstall": "yarn dvc:pull",
     "dvc:pull": "cd ./fixtures && dvc pull || exit 0 && cd ..",
-    "format": "prettier --write '**/*.{ts,js,json,yml}'",
+    "format": "prettier --write '**/*.{ts,js,yml}'",
     "ts:check": "tsc --noEmit",
     "ts:build": "tsc",
     "deploy": "NODE_OPTIONS='--use-openssl-ca' ts-node main.ts",
