--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,12 @@ export TANGLE_HTTP_URL="http://localhost:9944"
 export TANGLE_WSS_URL="ws://localhost:9944"
 # =========================================================================================
 # You can ignore everything below this line if you are running the service on a local machine
-export ATHENA_CHAIN_ID=5001
-export HERMES_CHAIN_ID=5002
-export DEMETER_CHAIN_ID=5003
+export ATHENA_CHAIN_ID=3884533461
+export HERMES_CHAIN_ID=3884533462
+export DEMETER_CHAIN_ID=3884533463
+export ATHENA_CHAIN_PORT=38461
+export HERMES_CHAIN_PORT=38462
+export DEMETER_CHAIN_PORT=38463
 export ATHENA_CHAIN_EXPLORER_PORT=4001
 export HERMES_CHAIN_EXPLORER_PORT=4002
 export DEMETER_CHAIN_EXPLORER_PORT=4003
@@ -43,7 +46,7 @@ export SMART_CONTRACT_VERIFIER__SERVER__GRPC__ADDR=0.0.0.0:8051
 
 export SMART_CONTRACT_VERIFIER__SOLIDITY__ENABLED=true
 export SMART_CONTRACT_VERIFIER__SOLIDITY__COMPILERS_DIR=/tmp/solidity-compilers
-export SMART_CONTRACT_VERIFIER__SOLIDITY__REFRESH_VERSIONS_SCHEDULE=0 0 * * * * *
+export SMART_CONTRACT_VERIFIER__SOLIDITY__REFRESH_VERSIONS_SCHEDULE="0 0 * * * * *"
 
 # It depends on the OS you are running the service on
 export SMART_CONTRACT_VERIFIER__SOLIDITY__FETCHER__LIST__LIST_URL=https://solc-bin.ethereum.org/linux-amd64/list.json
