--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ export SMART_CONTRACT_VERIFIER__SOLIDITY__FETCHER__LIST__LIST_URL=https://solc-b
 export VISUALIZER_DOCKER_TAG=v0.2.0
 export VISUALIZER__SERVER__GRPC__ENABLED=false
 
-export DOCKER_TAG=5.1.2.commit.b8965d76
+export DOCKER_TAG=5.1.0
 export ETHEREUM_JSONRPC_VARIANT="ganache"
 export ETHEREUM_JSONRPC_TRANSPORT=http
 export ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
