--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   db:
     image: postgres:14
     restart: always
-    container_name: "postgres"
+    container_name: "db"
     command: postgres -c 'max_connections=600'
     environment:
       POSTGRES_PASSWORD: ""
