change ports of local testnets to match web-dapp

--- a/.env.example
+++ b/.env.example
@@ -22,12 +22,12 @@ export TANGLE_HTTP_URL="http://localhost:9944"
 export TANGLE_WSS_URL="ws://localhost:9944"
 # =========================================================================================
 # You can ignore everything below this line if you are running the service on a local machine
-export ATHENA_CHAIN_ID=3884533461
-export HERMES_CHAIN_ID=3884533462
-export DEMETER_CHAIN_ID=3884533463
-export ATHENA_CHAIN_PORT=38461
-export HERMES_CHAIN_PORT=38462
-export DEMETER_CHAIN_PORT=38463
+export ATHENA_CHAIN_ID=5005
+export HERMES_CHAIN_ID=5004
+export DEMETER_CHAIN_ID=5006
+export ATHENA_CHAIN_PORT=5005
+export HERMES_CHAIN_PORT=5004
+export DEMETER_CHAIN_PORT=5006
 export ATHENA_CHAIN_EXPLORER_PORT=4001
 export HERMES_CHAIN_EXPLORER_PORT=4002
 export DEMETER_CHAIN_EXPLORER_PORT=4003
