--- a/deploy/package.json
+++ b/deploy/package.json
@@ -31,25 +31,25 @@
     "@polkadot/types": "9.2.3",
     "@polkadot/util": "10.1.5",
     "@polkadot/util-crypto": "10.1.5",
-    "@webb-tools/vbridge": "0.5.36",
-    "@webb-tools/anchors": "0.5.40",
-    "@webb-tools/api": "0.1.4-123",
-    "@webb-tools/api-derive": "0.1.4-123",
-    "@webb-tools/app-util": "0.1.4-123",
-    "@webb-tools/contracts": "0.5.40",
-    "@webb-tools/interfaces": "0.5.40",
-    "@webb-tools/sdk-core": "0.1.4-123",
-    "@webb-tools/test-utils": "0.1.4-123",
-    "@webb-tools/tokens": "0.5.40",
-    "@webb-tools/utils": "0.5.32",
-    "@webb-tools/wasm-utils": "0.1.4-123"
+    "@webb-tools/vbridge": "^1.0.0",
+    "@webb-tools/anchors": "^1.0.0",
+    "@webb-tools/contracts": "^1.0.0",
+    "@webb-tools/interfaces": "^1.0.0",
+    "@webb-tools/tokens": "^1.0.0",
+    "@webb-tools/utils": "^1.0.0",
+    "@webb-tools/api": "0.1.4-126",
+    "@webb-tools/api-derive": "0.1.4-126",
+    "@webb-tools/app-util": "0.1.4-126",
+    "@webb-tools/sdk-core": "0.1.4-126",
+    "@webb-tools/test-utils": "0.1.4-126",
+    "@webb-tools/wasm-utils": "0.1.4-126"
   },
   "dependencies": {
-    "@webb-tools/contracts": "0.5.40",
-    "@webb-tools/interfaces": "0.5.40",
-    "@webb-tools/sdk-core": "0.1.4-123",
-    "@webb-tools/utils": "0.5.32",
-    "@webb-tools/vbridge": "0.5.36",
+    "@webb-tools/contracts": "^1.0.0",
+    "@webb-tools/interfaces": "^1.0.0",
+    "@webb-tools/sdk-core": "0.1.4-126",
+    "@webb-tools/utils": "^1.0.0",
+    "@webb-tools/vbridge": "^1.0.0",
     "chalk": "^4",
     "ecpair": "^2.1.0",
     "ethers": "5.7.2",
@@ -66,6 +66,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "v18.14",
     "@types/ramda": "^0.29.0",
+    "@types/yargs": "^17.0.24",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
