feat: switch to anvil

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,15 @@ export NETWORK="Webb Testnet"
 export ATHENA_CHAIN_SUBNETWORK="Athena"
 export HERMES_CHAIN_SUBNETWORK="Hermes"
 export DEMETER_CHAIN_SUBNETWORK="Demeter"
+
+export ATHENA_HTTP_URL="http://localhost:${ATHENA_CHAIN_PORT}"
+export HERMES_HTTP_URL="http://localhost:${HERMES_CHAIN_PORT}"
+export DEMETER_HTTP_URL="http://localhost:${DEMETER_CHAIN_PORT}"
+export ATHENA_WS_URL="http://localhost:${ATHENA_CHAIN_PORT}"
+export HERMES_WS_URL="http://localhost:${HERMES_CHAIN_PORT}"
+export DEMETER_WS_URL="http://localhost:${DEMETER_CHAIN_PORT}"
+
+export FOUNDRY_DOCKER_TAG=nightly-4b27780045246445ca327f531be3a2c955b57666
 # =========================================================================================
 export SMART_CONTRACT_VERIFIER_DOCKER_TAG=v1.1.0
 export SMART_CONTRACT_VERIFIER__SERVER__HTTP__ENABLED=true
