--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,29 +126,27 @@ services:
         max-file: "10"
 
   athena_chain:
-    image: trufflesuite/ganache:latest
+    image: ghcr.io/foundry-rs/foundry:${FOUNDRY_DOCKER_TAG}
     container_name: athena-chain
     ports:
       - ${ATHENA_CHAIN_PORT}:8545
     volumes:
       - ./data/athena_chain:/data
+      - ./scripts:/scripts
     networks:
       - webb
     env_file:
       - .env
+    environment:
+      CHAIN_ID: "${ATHENA_CHAIN_ID}"
     command:
-      - "--chain.chainId=${ATHENA_CHAIN_ID}"
-      - "--database.dbPath=/data"
-      - "--miner.defaultGasPrice=5000000000" # 5 gwei
-      - "--wallet.mnemonic=${MNEMONIC}"
-      - "--wallet.defaultBalance=10000" # 10,000 ETH
-      - "--logging.debug=false"
-      - "--logging.verbose=false"
+      - /scripts/anvil.sh
     logging:
       driver: "json-file"
       options:
         max-size: "100m"
         max-file: "10"
+
   hermes_blockscout:
     depends_on:
       - db
@@ -183,24 +181,21 @@ services:
         max-file: "10"
 
   hermes_chain:
-    image: trufflesuite/ganache:latest
+    image: ghcr.io/foundry-rs/foundry:${FOUNDRY_DOCKER_TAG}
     container_name: hermes-chain
     ports:
       - ${HERMES_CHAIN_PORT}:8545
     volumes:
       - ./data/hermes_chain:/data
+      - ./scripts:/scripts
     networks:
       - webb
     env_file:
       - .env
+    environment:
+      CHAIN_ID: "${HERMES_CHAIN_ID}"
     command:
-      - "--chain.chainId=${HERMES_CHAIN_ID}"
-      - "--database.dbPath=/data"
-      - "--miner.defaultGasPrice=5000000000" # 5 gwei
-      - "--wallet.mnemonic=${MNEMONIC}"
-      - "--wallet.defaultBalance=10000" # 10,000 ETH
-      - "--logging.debug=false"
-      - "--logging.verbose=false"
+      - /scripts/anvil.sh
     logging:
       driver: "json-file"
       options:
@@ -240,24 +235,21 @@ services:
         max-file: "10"
 
   demeter_chain:
-    image: trufflesuite/ganache:latest
+    image: ghcr.io/foundry-rs/foundry:${FOUNDRY_DOCKER_TAG}
     container_name: demeter-chain
     ports:
       - ${DEMETER_CHAIN_PORT}:8545
     volumes:
       - ./data/demeter_chain:/data
+      - ./scripts:/scripts
     networks:
       - webb
     env_file:
       - .env
+    environment:
+      CHAIN_ID: "${DEMETER_CHAIN_ID}"
     command:
-      - "--chain.chainId=${DEMETER_CHAIN_ID}"
-      - "--database.dbPath=/data"
-      - "--miner.defaultGasPrice=5000000000" # 5 gwei
-      - "--wallet.mnemonic=${MNEMONIC}"
-      - "--wallet.defaultBalance=10000" # 10,000 ETH
-      - "--logging.debug=false"
-      - "--logging.verbose=false"
+      - /scripts/anvil.sh
     logging:
       driver: "json-file"
       options:
