use bash to execute fetch fixtures script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         run: yarn install
 
       - name: Fetch ZK Fixtures
-        run: ./scripts/fetch-fixtures.sh
+        run: bash ./scripts/fetch-fixtures.sh
 
       - name: Run deployment script
         working-directory: deploy
