--- a/deploy/package.json
+++ b/deploy/package.json
@@ -28,11 +28,7 @@
     "@webb-tools/proposals": "^1.0.6",
     "@webb-tools/utils": "^1.0.6",
     "@webb-tools/vbridge": "^1.0.6",
-    "@polkadot/api": "9.2.3",
-    "@polkadot/keyring": "10.1.5",
-    "@polkadot/types": "9.2.3",
-    "@polkadot/util": "10.1.5",
-    "@polkadot/util-crypto": "10.1.5",
+    "@webb-tools/tangle-substrate-types": "0.3.2-hotfix.1",
     "chalk": "^4",
     "ecpair": "^2.1.0",
     "ethers": "5.7.2",
