Small updates and fixes

--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,11 @@ export HERMES_TESTNET_PRIVATE_KEY=$RELAYER_PRIVATE_KEY
 export DEMETER_TESTNET_PRIVATE_KEY=$RELAYER_PRIVATE_KEY
 
 export TANGLE_WEBB_RELAYER_SURI="//Bob"
-export TANGLE_HTTP_URL="http://localhost:9944"
-export TANGLE_WSS_URL="ws://localhost:9944"
+export TANGLE_HTTP_URL="http://127.0.0.1:9944"
+export TANGLE_WSS_URL="ws://127.0.0.1:9944"
 # =========================================================================================
 # You can ignore everything below this line if you are running the service on a local machine
+export TANGLE_CHAIN_ID=4006
 export ATHENA_CHAIN_ID=3884533461
 export HERMES_CHAIN_ID=3884533462
 export DEMETER_CHAIN_ID=3884533463
