--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,6 @@ export HERMES_TESTNET_PRIVATE_KEY=$RELAYER_PRIVATE_KEY
 export DEMETER_TESTNET_PRIVATE_KEY=$RELAYER_PRIVATE_KEY
 
 export TANGLE_WEBB_RELAYER_SURI="//Bob"
-export TANGLE_HTTP_URL="http://127.0.0.1:9944"
-export TANGLE_WSS_URL="ws://127.0.0.1:9944"
 # =========================================================================================
 # You can ignore everything below this line if you are running the service on a local machine
 export TANGLE_CHAIN_ID=4006
@@ -34,11 +32,13 @@ export DEMETER_CHAIN_PORT=5006
 export ATHENA_CHAIN_EXPLORER_PORT=4001
 export HERMES_CHAIN_EXPLORER_PORT=4002
 export DEMETER_CHAIN_EXPLORER_PORT=4003
+export TANGLE_CHAIN_EXPLORER_PORT=4004
 export FAUCET_PORT=8000
 export NETWORK="Webb Testnet"
 export ATHENA_CHAIN_SUBNETWORK="Athena"
 export HERMES_CHAIN_SUBNETWORK="Hermes"
 export DEMETER_CHAIN_SUBNETWORK="Demeter"
+export TANGLE_CHAIN_SUBNETWORK="Tangle"
 
 export ATHENA_HTTP_URL="http://localhost:${ATHENA_CHAIN_PORT}"
 export HERMES_HTTP_URL="http://localhost:${HERMES_CHAIN_PORT}"
@@ -46,6 +46,8 @@ export DEMETER_HTTP_URL="http://localhost:${DEMETER_CHAIN_PORT}"
 export ATHENA_WS_URL="http://localhost:${ATHENA_CHAIN_PORT}"
 export HERMES_WS_URL="http://localhost:${HERMES_CHAIN_PORT}"
 export DEMETER_WS_URL="http://localhost:${DEMETER_CHAIN_PORT}"
+export TANGLE_HTTP_URL="http://127.0.0.1:9944"
+export TANGLE_WSS_URL="ws://127.0.0.1:9944"
 
 export FOUNDRY_DOCKER_TAG=nightly-4b27780045246445ca327f531be3a2c955b57666
 # =========================================================================================
