use custom Blockscout js tracer for tangle EVM

--- a/explorers.yml
+++ b/explorers.yml
@@ -213,6 +213,7 @@ services:
       ETHEREUM_JSONRPC_TRACE_URL: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:9944/
       DATABASE_URL: postgresql://postgres:@db:5432/tangle_blockscout?ssl=false
       ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT: 5m
+      INDEXER_INTERNAL_TRANSACTIONS_TRACER_TYPE: js
       CHAIN_ID: "${TANGLE_CHAIN_ID}"
       PORT: "${TANGLE_CHAIN_EXPLORER_PORT}"
       SUBNETWORK: "${TANGLE_CHAIN_SUBNETWORK}"
