--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
+      - name: Prepare environment
+        run: bash ./scripts/setup-orbit.sh
+
       - name: Setup environment with docker compose
         run: docker compose up -d
 
