Auto Reload ENV

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,7 @@ jobs:
         run: cp .env.example .env
 
       - name: Prepare environment
-        run: |
-          source .env
-          bash ./scripts/setup-orbit.sh
+        run: bash ./scripts/setup-orbit.sh
 
       - name: Setup environment with docker compose
         run: docker compose up -d
