Update the jsonrpc variant

--- a/.env.example
+++ b/.env.example
@@ -75,7 +75,7 @@ export VISUALIZER_DOCKER_TAG=v0.2.0
 export VISUALIZER__SERVER__GRPC__ENABLED=false
 
 export DOCKER_TAG=5.1.0
-export ETHEREUM_JSONRPC_VARIANT="ganache"
+export ETHEREUM_JSONRPC_VARIANT="geth"
 export ETHEREUM_JSONRPC_TRANSPORT=http
 export ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 export SHOW_TESTNET_LABEL=true
